# mine_search

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  LINUX_INSTALL.md  README.md  WINDOWS_INSTALL.md  backend.Dockerfile  backend.ci.Dockerfile  config.example.toml  docker-compose.yml  frontend.Dockerfile  nginx.conf  rust.Dockerfile  separate_deploy.md  setup.py  setup.sh  worker.Dockerfile  worker.ci.Dockerfile  worker.example.toml
.github/workflows/: docker-image.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/migrations/2026-02-15-134308-0000_add_unique_players/: down.sql  up.sql
backend/migrations/2026-02-15-144650-0000_crashed_to_not_null/: up.sql
backend/migrations/2026-02-22-074948-0000_add_indexes/: down.sql
backend/migrations/2026-02-23-132145-0000_players/: down.sql
backend/migrations/2026-02-25-164413-0000_is_modded_to_is_forge/: down.sql  up.sql
backend/migrations/2026-02-26-170650-0000_store_favicon/: down.sql
backend/migrations/2026-02-28-120000_rename_tables_and_columns/: down.sql
backend/migrations/2026-02-28-164819-0000_ping/: up.sql
backend/migrations/2026-03-01-164148-0000_add_player_last_seen_at/: down.sql  up.sql
backend/migrations/2026-06-14-000000-0000_is_forge_to_requires_mods/: down.sql
backend/migrations/2026-06-15-000000-0000_drop_legacy_ipc/: down.sql
backend/migrations/2026-06-20-000000-0000_add_processed_results/: down.sql  up.sql
backend/migrations/2026-07-08-000000-0000_add_motd_search/: down.sql  up.sql
backend/migrations/2026-07-09-000000-0000_join_status/: down.sql  up.sql
backend/migrations/2026-07-09-010000-0000_join_status_broken/: down.sql  up.sql
backend/src/: api_middleware.rs  auth.rs  chat.rs  config.rs  database.rs  error.rs  events.rs  html.rs  jwt_wrapper.rs  main.rs  persistence.rs  registry.rs  schema.rs  server_filters.rs  state.rs
backend/src/api/: add_ip.rs  add_ips.rs  add_target.rs  add_targets.rs  auth.rs  cleanup_favicons.rs  cleanup_snapshots.rs  delete_player.rs  fetch_players.rs  fetch_players_list.rs  fetch_server_data.rs  fetch_server_info.rs  fetch_server_list.rs  fetch_server_snapshots.rs  fetch_stats.rs  get_players.rs  get_server.rs  get_server_range.rs  me.rs  mod.rs  overwrite_server.rs  ping_server.rs  search_players.rs  server_delete.rs  set_cookie.rs  update_player.rs  update_server.rs
backend/src/models/: mod.rs  players.rs  servers.rs
backend/src/services/: api.rs  worker.rs
db_schema/: Cargo.toml  rustfmt.toml
db_schema/migrations/2025-01-02-124033_add_last_seen_server/: down.sql
db_schema/migrations/2025-01-08-104902_speedup_search/: up.sql
db_schema/migrations/2025-02-25-153814_was_online/: down.sql  up.sql
db_schema/migrations/2025-03-02-125206_server_post_options/: down.sql  up.sql
db_schema/migrations/2026-02-14-122342-0000_init/: down.sql  up.sql
db_schema/migrations/2026-02-15-143646-0000_checked_to_not_null/: down.sql  up.sql
db_schema/migrations/2026-02-15-144650-0000_crashed_to_not_null/: down.sql
db_schema/migrations/2026-02-15-163138-0000_add_defaults/: down.sql  up.sql
db_schema/migrations/2026-02-17-144448-0000_changes/: down.sql  up.sql
db_schema/migrations/2026-02-19-173703-0000_add_ips_table/: up.sql
db_schema/migrations/2026-02-22-074948-0000_add_indexes/: up.sql
db_schema/migrations/2026-02-23-132145-0000_players/: up.sql
db_schema/migrations/2026-02-23-202942-0000_update/: down.sql  up.sql
db_schema/migrations/2026-02-24-191137-0000_server_ping_connection/: down.sql  up.sql
db_schema/migrations/2026-02-25-160618-0000_is_modded/: down.sql  up.sql
db_schema/migrations/2026-02-26-170650-0000_store_favicon/: up.sql
db_schema/migrations/2026-02-28-120000_rename_tables_and_columns/: up.sql
db_schema/migrations/2026-02-28-150851-0000_target_fast/: down.sql  up.sql
db_schema/migrations/2026-02-28-164819-0000_ping/: down.sql
db_schema/migrations/2026-03-23-000000_shrink_snapshots/: down.sql  up.sql
db_schema/migrations/2026-06-14-000000-0000_is_forge_to_requires_mods/: up.sql
db_schema/migrations/2026-06-15-000000-0000_drop_legacy_ipc/: up.sql
db_schema/src/: chat.rs  config.rs  lib.rs  schema.rs
db_schema/src/models/: data.rs  ip.rs  mod.rs  ping_requests.rs  player_count_snapshots.rs  players.rs  scan_targets.rs  server_ping.rs  servers.rs
frontend/: buf.gen.yaml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  cn.ts  index.css  main.tsx  types.ts
frontend/src/api/: apiConfig.ts  client.ts  serversApi.ts
frontend/src/components/: AppShell.tsx  ErrorBoundary.tsx  LanguageSwitcher.tsx  Modal.tsx  ProtectedRoute.tsx  SegmentedSwitch.tsx  WorkerSelect.tsx  index.tsx
frontend/src/constants/: dashboardFilters.ts  serverDetail.ts
frontend/src/hooks/: useIntersectionRef.ts
masscan_wrapper/: Cargo.toml
masscan_wrapper/src/: main.rs
migrations/2024-12-29-123638_create_db/: down.sql  up.sql
migrations/2024-12-30-072108_update/: down.sql  up.sql
migrations/2024-12-30-175215_add_description/: down.sql  up.sql
migrations/2024-12-30-181011_rename_to_servers/: down.sql  up.sql
migrations/2025-01-01-111945_init/: down.sql  up.sql
migrations/2025-01-01-145536_add_default_last_seen/: down.sql  up.sql
migrations/2025-01-02-124033_add_last_seen_server/: up.sql
migrations/2025-01-02-161435_renew_description/: down.sql  up.sql
proto/: Cargo.toml  build.rs
proto/proto/: api.proto  worker.proto
proto/src/: lib.rs
src/: conn_wrapper.rs  database.rs  lib.rs  main.rs  mc_session.rs  packets.rs  schema.rs  server_actions.rs
src/server_actions/: mod.rs  with_connection.rs  without_connection.rs
worker/: Cargo.toml
worker/src/: config.rs  database.rs  diesel_backend.rs  engine.rs  grpc_backend.rs  lib.rs  main.rs  outbox.rs  packets.rs  report.rs  sink.rs
worker/src/modules/: external_module.rs  mod.rs  notify_module.rs  ping_module.rs  search_module.rs  update_module.rs
worker/src/server_actions/: with_connection.rs  without_connection.rs
(+94 files in other folders)
