[workspace]
resolver = "3"
members = ["backend", "worker", "db_schema", "proto"]
# masscan_wrapper stays a standalone crate (its own Cargo.lock/target). It lives
# under the workspace root, so it must be excluded or Cargo would adopt it.
exclude = ["masscan_wrapper"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Shared across two or more members. Declare the base version plus the commonly
# needed features here; members add extra features alongside `workspace = true`.
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
diesel = { version = "2.3.10", features = ["postgres", "chrono", "serde_json"] }
diesel-async = { version = "0.9.1", features = ["postgres", "deadpool"] }
diesel_migrations = "2.3.2"
rand = "0.10.1"
# gRPC stack. tonic-prost-build is fed a FileDescriptorSet produced by protox so
# no `protoc` binary is required at build time.
tonic = { version = "0.14.6", features = ["tls-ring", "tls-webpki-roots"] }
tonic-web = "0.14.6"
tonic-prost = "0.14.4"
prost = "0.14.4"
tonic-prost-build = "0.14.6"
protox = "0.9.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
# Windows has no system libpq, so we compile it from source. `bundled_without_openssl`
# skips libpq's TLS support, which avoids pulling in (and source-building) openssl-sys
# entirely. Local dev talks to a non-TLS Postgres, so no TLS is needed here. Linux/Docker
# use the system libpq+openssl instead (see backend's cfg-gated deps).
pq-sys = { version = "0.7.5", features = ["bundled_without_openssl"] }
