[workspace]
resolver = "3"
members = ["backend", "worker", "proto"]
exclude = ["masscan_wrapper"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
rand = "0.10.1"
tonic = { version = "0.14.6", features = ["tls-ring", "tls-webpki-roots"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
