[package]
name = "backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
proto = { path = "../proto" }
db_schema = { path = "../db_schema" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

tonic = { workspace = true }
tonic-web = { workspace = true }

diesel = { workspace = true, features = ["postgres_backend"] }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }

chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = { workspace = true }
lazy_static = "1.5.0"

[target.'cfg(windows)'.dependencies]
pq-sys = { workspace = true }
openssl-sys = { workspace = true }
