[package]
name = "backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
proto = { path = "../proto" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

tonic = { workspace = true }
tonic-web = { workspace = true }

diesel = { workspace = true, features = ["postgres_backend"] }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
toml = "1.1.2+spec-1.1.0"

tracing-subscriber = { workspace = true }
tracing = { workspace = true }

chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = { workspace = true }
lazy_static = "1.5.0"
# Plain-HTTP only (no TLS): the sole caller is an internal POST to watchtower's
# HTTP API over the docker network. default-features=false drops the TLS backends.
reqwest = { version = "0.13.4", default-features = false }

# Windows has no system libpq; pull in the bundled (source-built, no-TLS) one.
[target.'cfg(windows)'.dependencies]
pq-sys = { workspace = true }
