[package]
name = "backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
proto = { path = "../proto" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = "0.3.32"

tonic = { workspace = true }
tonic-web = "0.14.6"

diesel = { version = "2.3.10", features = ["postgres", "chrono", "serde_json", "postgres_backend"] }
diesel-async = { version = "0.9.2", features = ["postgres", "deadpool"] }
diesel_migrations = "2.3.2"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
toml = "1.1.2+spec-1.1.0"

tracing-subscriber = { workspace = true }
tracing = { workspace = true }

chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = { workspace = true }
lazy_static = "1.5.0"
# Plain-HTTP only (no TLS): the sole caller is an internal POST to watchtower's
# HTTP API over the docker network. default-features=false drops the TLS backends.
reqwest = { version = "0.13.4", default-features = false }

# Windows has no system libpq, so we compile it from source. `bundled_without_openssl`
# skips libpq's TLS support, which avoids pulling in (and source-building) openssl-sys
# entirely. Local dev talks to a non-TLS Postgres, so no TLS is needed here. Linux/Docker
# use the system libpq+openssl instead.
[target.'cfg(windows)'.dependencies]
pq-sys = { version = "0.7.5", features = ["bundled_without_openssl"] }
