[package]
name = "db_schema"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.7", features = ["postgres", "chrono", "serde_json"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
