[package]
name = "db_schema"
version = "0.1.0"
edition.workspace = true

[dependencies]
diesel = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
toml = "1.1.2+spec-1.1.0"
