[package]
name = "masscan_wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
proto = { path = "../proto" }
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
prost = "0.13"
