[package]
name = "worker"
version = "1.0.0"
edition.workspace = true

[dependencies]
mc_protocol = { version = "2.2.0"}
db_schema = { path = "../db_schema" }
tokio = { workspace = true }

rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }

chrono = { workspace = true }
anyhow = "1.0.102"
rand_chacha = "0.10.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = "1.23.3"

[target.'cfg(windows)'.dependencies]
pq-sys = { workspace = true }
openssl-sys = { workspace = true }
