[package]
name = "worker"
version = "1.0.0"
edition.workspace = true

[features]
default = ["grpc"]
# Default: stream results to the backend over gRPC (workers dial in).
grpc = ["dep:proto", "dep:tonic", "dep:tokio-stream"]
# Legacy: talk to PostgreSQL directly via diesel. No backend↔worker channel,
# so on-demand ping/scan from the API is unavailable in this mode.
diesel = [
    "dep:db_schema",
    "dep:diesel",
    "dep:diesel-async",
    "dep:diesel_migrations",
    "dep:pq-sys",
    "dep:openssl-sys",
]

[dependencies]
mc_protocol = { version = "2.2.0" }
tokio = { workspace = true }

rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0.102"
rand_chacha = "0.10.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = "1.23.3"
toml = "1.1.2"
async-trait = "0.1"

# gRPC mode
proto = { path = "../proto", optional = true }
tonic = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# diesel mode
db_schema = { path = "../db_schema", optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
pq-sys = { workspace = true, optional = true }
openssl-sys = { workspace = true, optional = true }

# pq-sys/openssl-sys are linkage-only (pulled to control native linking via their
# build scripts), so cargo-machete reports them as unused. They are required.
[package.metadata.cargo-machete]
ignored = ["pq-sys", "openssl-sys"]
