[package]
name = "worker"
version = "1.0.0"
edition.workspace = true

[dependencies]
mc_protocol = { version = "2.2.0" }
tokio = { workspace = true }

rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0.102"
rand_chacha = "0.10.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = "1.23.3"
toml = "1.1.2+spec-1.1.0"
toml_edit = "0.25.12+spec-1.1.0"

# The worker streams scan results to the backend over gRPC (workers dial in).
proto = { path = "../proto" }
tonic = { workspace = true }
tokio-stream = { workspace = true }
